### The Program Manager Eternity What's Up File

Next Release

    Added auto switching for QScroll's scrolling between Wheel and Movement based on the 
        presence of scroll wheel support.
    Added Scroll Wheel support to QScroll.
    Improved compatibility when executing of some programs that have unusual command line 
        string requirements.

2022-08-21

    Reduced mouse flicker a little. (getting rid of it completely will require
        changing how the QCrt unit handles it. More work than I want to do now)
    Improved compatibility with non-CTMouse drivers. (Like MS Mouse Driver)
    Found issue causing double keypresses, removed work-around. Returned flag
        from interrupt 15 hook was not being set/cleared.

2022-02-08

    Work-around for double keypresses under some VMs when internation keyboard
        driver is loaded.
    Fix label for Sound effects toggle using wrong component id.
    Build script improvements and fixes.
    Including updated and additional language translations, fonts and themes.

2021-08-20

    Added Window Close characters to themes
    Corrected Config for correct French font filename
    French & Turkish Language basic rough themes
    Some font improvements
    Added delay to font preview in Font Designer for easier viewing.
    Time Screen saver now remembers scale setting.
    QScroll now remembers Smooth scroll settings.
    Fixed typing in find box goes behind clock UI bug. (minor, self corrects)
    QResFile (and format) updated to support using UPX on EXE files at any
        time. Now not limited attaching files only after compression.

2021-08-15

    Added U keyboard option to QScroll to toggle Smooth upward scrolling.
    Added S keyboard option to TIME Screen Saver to change display scale.
    Added support to uninstall using FreeDOS package managers.
    Changed installer to use QResFile binrary resources.
    Add Support to UPX compress binaries in build process.