@@ -5,7 +5,7 @@
 
 1656006487 ec4d85c49c0a22aac53619bb29b29837b0a4e84228c662f393fbd428bf1fc510081b612f704e08d1e2def7433ac9c672c80877d5ec453e9a555f11488fba6919 README.md
 1644338275 b43c487d81e49af2fb0341f2d5cf238f38a6f1ce6128f2d4c58f2dec6f019c8cf30d777ba0771a10616b2429139df2976288c7423addd55737e6efe579cf6b0e SOURCE/PGME/BUILD.BAT
-1721807931 7411b513cfc5c858e95f2c66c96218e39aa45eeae1e2d7d90e2299561a8afce44eb31428893a783f611a48348d7028d588f4ad955447caf29d453e91e2cf93ed SOURCE/PGME/CHANGES.TXT
+1721834299 3f9d49145cbfb4cac3f087e1c04410b30d01137b68f6b0e6118eb9d82f029ac65c8d5861731e2bb3d25341ef2582c265c528d4fba0faec2413cc43d2c7ce6fec SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1642974860 5fa83e89d2759c871ffcbc9b2d3b31edb1a9d3259a61ca67f90882832c65831bd276b883675354a03e31bbaba234befafcb4bae890c57970b7faea4c7eaaa7ee SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
@@ -78,7 +78,7 @@
 1644338128 48ae4a77afcb939cdbb44b42e2f092f46a84c04c72de2529c26a677a2303e5c9198ca443dc4960d8d571a244cd87f1ce02b696c954a4202428ef196c31cca5ea SOURCE/PGME/ETERNITY/INSTALL.PAS
 1437956760 3290af822a07befdda4f4a21844697bdd0eba0261d0a8895be98822f726cf41aa9f256c7de1e34e3190e22e73bd2ebc1937961d8874a3d8be7b1583fdb0a1c3e SOURCE/PGME/ETERNITY/KIOSK.OFF
 1437956760 c08a4f0684abde28e3b9fb217eb814dcdd518a2495d9ffd0545cae35a614d39de65227a417d26b6c4df87b56661ab88d4cec0768abeb6eddc5e9a557a24ce390 SOURCE/PGME/ETERNITY/KIOSK.ON
-1628086876 97cf0c977f981e4e44e632b93cdf1e290f62e12945f3888b5611f48923c42982ae63bf7c33c01b8f71a3bfb4a8c3849a7b556f6161e9f02271b555958b043689 SOURCE/PGME/ETERNITY/PGME.PAS
+1721813222 000569b35b007996dfb63835b6f296a03892c5d6e108736ec1ba1059e4635cfe59bf1c5c943c4c8e9a87c5dd29eaa3335cdc28ee77aa39b339050c113f0ef544 SOURCE/PGME/ETERNITY/PGME.PAS
 1628367555 430b26f1be4c88b87e02354cbccec1a0c165188185d436baf00b130fba8d1e2eb143739391983695bab6d6ff6e69cdab28239298e0b2f8ee436aee119a79f1d5 SOURCE/PGME/ETERNITY/PGM_CALL.PAS
 1437956760 1e9001f9d361c8d79881fa2f8872b2f451ec7c31b673428ed3f8999e8867beab530db9061184894f2243751ccd6827aa45511e148058bc0cf41b0b18a34efcdd SOURCE/PGME/ETERNITY/SPLICE.PAS
 1628753534 d7e7100c2dbff2a935b7262a86800607a6c9209ec14ff85f9db36927d637e261dc82cd758ae2a31300806760f828d257b15f8af3d0f66e68a15b4725e4151994 SOURCE/PGME/ETERNITY/TCACHEIT.INC
@@ -110,7 +110,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1721808632 481649fce13095b79197e8f3957fd4f5099922ef69e94e0f851a1ffabc4ec4f956b91a9444c498699313f7c4fee0e96552ece04e5e6f266a7be3cf6da722d5e8 SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1721833889 75017597a26ed5de4ee1da92bb95a4ed911ddd43de280daec24639aaa410fad1658e3322c27649d89b229daadba7d5adf3cc0a5114a261a5291199ffe4845473 SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1629328884 77c9390d87a7f6fed5a1fd45c16ce06f6273d56e3201de747e2b1f30d3c13d7678122af6f68f8f5cbcf2a7a1271733c9b42213578d3292f157163da88f288308 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -137,9 +137,9 @@
 1628934964 91702ef73bc91a61c88b09da5775ee613f6217f68e20307a4b2adced6e472bba6c134e4213c5f2b151e464130afa51ea2ebd139dceca2904a3dc8ba1bb03847b SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1721808566 36c48f893db6a4482ea3fbaf207261e2f624d5590604b6eb4cbde202af82cdf9d8c6d59556aca548b214be93c452e4c80f6d0a60c17fc3afc247371fa84b5f19 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1721832496 46c3f61099562e4fe559b226a80fc90ae9ed5bd231dc6548818c91a13e6ad55fce28814edcc70fca1d4249a98bad6705137495f994599462f18c56a7d0b6ec24 SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
-1628788946 c375676499bf5c9bd8fc5856ea8f2e2ee8b38db4209331f9046d6f4c7adc5fd2e5283c20911f5b0872fef52628e4a5d27c2a3dc1da9d02efa288197cfef06eca SOURCE/PGME/QUICKCRT/QDOS.PAS
+1721813104 4c2f896b70f562f9fbc1030daec24d2adce3c411bc6e0727868934834a4d1826db78710b3a099ac4ca81e5ed994ae13358d4d3b313edf2dd198b36bb620216bc SOURCE/PGME/QUICKCRT/QDOS.PAS
 1628876051 9a72b0980c9415ec9c2273742c563c0393fc5bf0e29fd1d57ac751539b39a7f0a381d2fdc608957539a9b76e7a2a7fe2f6340fa062f9eca972f6305d8fb7a22e SOURCE/PGME/QUICKCRT/QERRORS.PAS
 1437956760 b4cf8ba9561839fd58204c3d0d5c4b822a1e7336c5d9d6e9c61c83b663bb7de1f08e852bbfbd1626025a670d797c6075b6d1919d0f1f3f8b59942e0bf7a39b46 SOURCE/PGME/QUICKCRT/QFILEDLG.PAS
 1628876130 38610ea73accd372ac144c8eb0088314459ffb5defe299a7bd03bb1c18bedb90484a2cf227c6942a79fa906fd2b28954301c29b46a299d0a3b87080843a6065f SOURCE/PGME/QUICKCRT/QFILES.PAS
@@ -204,7 +204,7 @@
 1721808947 99d4c7f3d1a9d627acf7ea922d135f5f2f5a1e53b8c34a4267564f5c102b7cfccb11087ba1b537d74123b4d0992b9c3da6dd64a2d94fcb865606a651b16f230a SOURCE/PGME/VERSION.INC
 1656006487 ec4d85c49c0a22aac53619bb29b29837b0a4e84228c662f393fbd428bf1fc510081b612f704e08d1e2def7433ac9c672c80877d5ec453e9a555f11488fba6919 README.md
 1644338275 b43c487d81e49af2fb0341f2d5cf238f38a6f1ce6128f2d4c58f2dec6f019c8cf30d777ba0771a10616b2429139df2976288c7423addd55737e6efe579cf6b0e SOURCE/PGME/BUILD.BAT
-1721807931 7411b513cfc5c858e95f2c66c96218e39aa45eeae1e2d7d90e2299561a8afce44eb31428893a783f611a48348d7028d588f4ad955447caf29d453e91e2cf93ed SOURCE/PGME/CHANGES.TXT
+1721834299 3f9d49145cbfb4cac3f087e1c04410b30d01137b68f6b0e6118eb9d82f029ac65c8d5861731e2bb3d25341ef2582c265c528d4fba0faec2413cc43d2c7ce6fec SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1642974860 5fa83e89d2759c871ffcbc9b2d3b31edb1a9d3259a61ca67f90882832c65831bd276b883675354a03e31bbaba234befafcb4bae890c57970b7faea4c7eaaa7ee SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
@@ -277,7 +277,7 @@
 1644338128 48ae4a77afcb939cdbb44b42e2f092f46a84c04c72de2529c26a677a2303e5c9198ca443dc4960d8d571a244cd87f1ce02b696c954a4202428ef196c31cca5ea SOURCE/PGME/ETERNITY/INSTALL.PAS
 1437956760 3290af822a07befdda4f4a21844697bdd0eba0261d0a8895be98822f726cf41aa9f256c7de1e34e3190e22e73bd2ebc1937961d8874a3d8be7b1583fdb0a1c3e SOURCE/PGME/ETERNITY/KIOSK.OFF
 1437956760 c08a4f0684abde28e3b9fb217eb814dcdd518a2495d9ffd0545cae35a614d39de65227a417d26b6c4df87b56661ab88d4cec0768abeb6eddc5e9a557a24ce390 SOURCE/PGME/ETERNITY/KIOSK.ON
-1628086876 97cf0c977f981e4e44e632b93cdf1e290f62e12945f3888b5611f48923c42982ae63bf7c33c01b8f71a3bfb4a8c3849a7b556f6161e9f02271b555958b043689 SOURCE/PGME/ETERNITY/PGME.PAS
+1721813222 000569b35b007996dfb63835b6f296a03892c5d6e108736ec1ba1059e4635cfe59bf1c5c943c4c8e9a87c5dd29eaa3335cdc28ee77aa39b339050c113f0ef544 SOURCE/PGME/ETERNITY/PGME.PAS
 1628367555 430b26f1be4c88b87e02354cbccec1a0c165188185d436baf00b130fba8d1e2eb143739391983695bab6d6ff6e69cdab28239298e0b2f8ee436aee119a79f1d5 SOURCE/PGME/ETERNITY/PGM_CALL.PAS
 1437956760 1e9001f9d361c8d79881fa2f8872b2f451ec7c31b673428ed3f8999e8867beab530db9061184894f2243751ccd6827aa45511e148058bc0cf41b0b18a34efcdd SOURCE/PGME/ETERNITY/SPLICE.PAS
 1628753534 d7e7100c2dbff2a935b7262a86800607a6c9209ec14ff85f9db36927d637e261dc82cd758ae2a31300806760f828d257b15f8af3d0f66e68a15b4725e4151994 SOURCE/PGME/ETERNITY/TCACHEIT.INC
@@ -309,7 +309,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1721808632 481649fce13095b79197e8f3957fd4f5099922ef69e94e0f851a1ffabc4ec4f956b91a9444c498699313f7c4fee0e96552ece04e5e6f266a7be3cf6da722d5e8 SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1721833889 75017597a26ed5de4ee1da92bb95a4ed911ddd43de280daec24639aaa410fad1658e3322c27649d89b229daadba7d5adf3cc0a5114a261a5291199ffe4845473 SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1629328884 77c9390d87a7f6fed5a1fd45c16ce06f6273d56e3201de747e2b1f30d3c13d7678122af6f68f8f5cbcf2a7a1271733c9b42213578d3292f157163da88f288308 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -336,9 +336,9 @@
 1628934964 91702ef73bc91a61c88b09da5775ee613f6217f68e20307a4b2adced6e472bba6c134e4213c5f2b151e464130afa51ea2ebd139dceca2904a3dc8ba1bb03847b SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1721808566 36c48f893db6a4482ea3fbaf207261e2f624d5590604b6eb4cbde202af82cdf9d8c6d59556aca548b214be93c452e4c80f6d0a60c17fc3afc247371fa84b5f19 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1721832496 46c3f61099562e4fe559b226a80fc90ae9ed5bd231dc6548818c91a13e6ad55fce28814edcc70fca1d4249a98bad6705137495f994599462f18c56a7d0b6ec24 SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
-1628788946 c375676499bf5c9bd8fc5856ea8f2e2ee8b38db4209331f9046d6f4c7adc5fd2e5283c20911f5b0872fef52628e4a5d27c2a3dc1da9d02efa288197cfef06eca SOURCE/PGME/QUICKCRT/QDOS.PAS
+1721813104 4c2f896b70f562f9fbc1030daec24d2adce3c411bc6e0727868934834a4d1826db78710b3a099ac4ca81e5ed994ae13358d4d3b313edf2dd198b36bb620216bc SOURCE/PGME/QUICKCRT/QDOS.PAS
 1628876051 9a72b0980c9415ec9c2273742c563c0393fc5bf0e29fd1d57ac751539b39a7f0a381d2fdc608957539a9b76e7a2a7fe2f6340fa062f9eca972f6305d8fb7a22e SOURCE/PGME/QUICKCRT/QERRORS.PAS
 1437956760 b4cf8ba9561839fd58204c3d0d5c4b822a1e7336c5d9d6e9c61c83b663bb7de1f08e852bbfbd1626025a670d797c6075b6d1919d0f1f3f8b59942e0bf7a39b46 SOURCE/PGME/QUICKCRT/QFILEDLG.PAS
 1628876130 38610ea73accd372ac144c8eb0088314459ffb5defe299a7bd03bb1c18bedb90484a2cf227c6942a79fa906fd2b28954301c29b46a299d0a3b87080843a6065f SOURCE/PGME/QUICKCRT/QFILES.PAS
