@@ -317,14 +317,6 @@ begin
 		GotoXY(1,Hi(ScreenMax)+1);
 		ClearEvent(E);
 		While E.What = evNothing do GetEvent(E);
-		if E.What and evMouseWheel = evMouseWheel then begin   
-            if E.Wheel < 0 then
-                MoveDown(ABS(E.Wheel))
-            else
-                MoveUp(ABS(E.Wheel));		    
-		    { E.What := E.What and (not evMouseWheel); }
-            ClearEvent(E);
-		end;
 		if E.What and evKeyboard <> evNothing then begin
 			if UCase(E.CharCode) = 'S' then begin
 				ClearEvent(E);
